--- a/contact-us.html
+++ b/contact-us.html
@@ -905,18 +905,24 @@
                 <h4>Contact Information</h4>
                 <hr>
                 <ul class="list-sm">
-                  <li class="object-inline"><span class="icon icon-md mdi mdi-map-marker text-primary"></span><a
-                      class="link-default" href="#">Training & Placement Office, Chandigarh College of
+                  <li class="object-inline">
+                    <span class="icon icon-md mdi mdi-map-marker text-primary"></span>
+                    <a class="link-default" href="#">Training & Placement Office, Chandigarh College of
                       Engineering and Technology, Sector-26, Chandigarh <br> Pincode - 160019
-                    </a></li>
-                  <li class="object-inline"><span class="icon icon-md mdi mdi-phone text-primary"></span>
+                    </a>
+                  </li>
+                  <li class="object-inline">
+                    <span class="icon icon-md mdi mdi-phone text-primary"></span>
                     <ul class="list-0">
-                      <li><a class="link-default" href="tel:#">+91 94144 03565 (Phone)</a></li>
-                      <li><a class="link-default" href="tel:#">0172-2750872 (Fax)</a></li>
+                      <li><a class="link-default" href="tel:+91941440365">+91 94144 03565 (Phone)</a>
+                      </li>
+                      <li><a class="link-default" href="tel:01722750872">0172-2750872 (Fax)</a></li>
                     </ul>
                   </li>
-                  <li class="object-inline"><span class="icon icon-md mdi mdi-email text-primary"></span><a
-                      class="link-default" href="mailto:#">&nbsptpo@ccet.ac.in</a></li>
+                  <li class="object-inline">
+                    <span class="icon icon-md mdi mdi-email text-primary"></span>
+                    <a class="link-default" href="mailto:tpo@ccet.ac.in">tpo@ccet.ac.in</a>
+                  </li>
                 </ul>
               </div>
             </div>
