--- a/events.html
+++ b/events.html
@@ -50,8 +50,8 @@
                                 <button class="rd-navbar-toggle"
                                     data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                                 <!-- RD Navbar Brand-->
-                                <a class="rd-navbar-brand" href="index.html"> <img src="images/logotpc.png"
-                                        alt="" width="190" height="37" /></a>
+                                <a class="rd-navbar-brand" href="index.html"> <img src="images/logotpc.png" alt=""
+                                        width="190" height="37" /></a>
                             </div>
                             <div class="rd-navbar-main-element">
                                 <div class="rd-navbar-nav-wrap">
@@ -72,10 +72,10 @@
                                                           href="testimonials.html">Testimonials</a></li>
                                               </ul>
                                           </li> -->
-                                        <li class="rd-nav-item active"><a class="rd-nav-link" href="events.html">Events</a>
+                                        <li class="rd-nav-item active"><a class="rd-nav-link"
+                                                href="events.html">Events</a>
                                         </li>
-                                        <li class="rd-nav-item"><a class="rd-nav-link"
-                                                href="code-of-conduct.html">Code
+                                        <li class="rd-nav-item"><a class="rd-nav-link" href="code-of-conduct.html">Code
                                                 of
                                                 Conduct</a>
                                         </li>
@@ -187,7 +187,7 @@
                                         <li class="rd-nav-item"><a class="rd-nav-link" href="contact-us.html">Contact
                                                 Us</a>
                                         </li>
-                                        
+
                                     </ul>
                                 </div>
                                 <!-- RD Navbar Search-->
@@ -231,18 +231,24 @@
             <div class="container">
                 <!-- Isotope Filters-->
                 <div class="isotope-filters isotope-filters-modern">
-                    <button class="isotope-filters-toggle button button-sm button-primary" data-custom-toggle="#isotope-filters" data-custom-toggle-disable-on-blur="true">Filter<span class="caret"></span></button>
+                    <button class="isotope-filters-toggle button button-sm button-primary"
+                        data-custom-toggle="#isotope-filters" data-custom-toggle-disable-on-blur="true">Filter<span
+                            class="caret"></span></button>
                     <ul class="isotope-filters-list" id="isotope-filters">
-                        <li><a class="active" data-isotope-filter="*" data-isotope-group="portfolio" href="#">All Types</a></li>
+                        <li><a class="active" data-isotope-filter="*" data-isotope-group="portfolio" href="#">All
+                                Types</a></li>
                         <li><a data-isotope-filter="Type 1" data-isotope-group="portfolio" href="#">Events</a></li>
                         <li><a data-isotope-filter="Type 2" data-isotope-group="portfolio" href="#">Meetings</a></li>
                         <li><a data-isotope-filter="Type 3" data-isotope-group="portfolio" href="#">Conferences</a></li>
                     </ul>
                 </div>
-                <div class="isotope isotope-responsive row" data-isotope-layout="fitRows" data-isotope-group="portfolio" data-lightgallery="group">
+                <div class="isotope isotope-responsive row" data-isotope-layout="fitRows" data-isotope-group="portfolio"
+                    data-lightgallery="group">
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 3">
                         <!-- Thumbnail Classic-->
-                        <a class="thumbnail-classic" href="images/gallery-original-1.jpg" data-lightgallery="item"><img class="thumbnail-classic-image" src="images/grid-layout-1-370x256.jpg" alt="" width="370" height="256" />
+                        <a class="thumbnail-classic" href="images/gallery-original-1.jpg" data-lightgallery="item"><img
+                                class="thumbnail-classic-image" src="images/grid-layout-1-370x256.jpg" alt=""
+                                width="370" height="256" />
                             <div class="thumbnail-classic-caption">
                                 <p class="thumbnail-classic-title">Boston Meeting</p>
                                 <p class="thumbnail-classic-text">Boston, Events</p>
@@ -252,7 +258,9 @@
                     </div>
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 2">
                         <!-- Thumbnail Classic-->
-                        <a class="thumbnail-classic" href="images/gallery-original-2.jpg" data-lightgallery="item"><img class="thumbnail-classic-image" src="images/grid-layout-2-370x256.jpg" alt="" width="370" height="256" />
+                        <a class="thumbnail-classic" href="images/gallery-original-2.jpg" data-lightgallery="item"><img
+                                class="thumbnail-classic-image" src="images/grid-layout-2-370x256.jpg" alt=""
+                                width="370" height="256" />
                             <div class="thumbnail-classic-caption">
                                 <p class="thumbnail-classic-title">Seattle Meeting</p>
                                 <p class="thumbnail-classic-text">Seattle, Events</p>
@@ -262,7 +270,9 @@
                     </div>
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 1">
                         <!-- Thumbnail Classic-->
-                        <a class="thumbnail-classic" href="images/gallery-original-3.jpg" data-lightgallery="item"><img class="thumbnail-classic-image" src="images/grid-layout-3-370x256.jpg" alt="" width="370" height="256" />
+                        <a class="thumbnail-classic" href="images/gallery-original-3.jpg" data-lightgallery="item"><img
+                                class="thumbnail-classic-image" src="images/grid-layout-3-370x256.jpg" alt=""
+                                width="370" height="256" />
                             <div class="thumbnail-classic-caption">
                                 <p class="thumbnail-classic-title">The Future of Politics</p>
                                 <p class="thumbnail-classic-text">Discussion, Meeting</p>
@@ -272,7 +282,9 @@
                     </div>
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 2">
                         <!-- Thumbnail Classic-->
-                        <a class="thumbnail-classic" href="images/gallery-original-4.jpg" data-lightgallery="item"><img class="thumbnail-classic-image" src="images/grid-layout-4-370x256.jpg" alt="" width="370" height="256" />
+                        <a class="thumbnail-classic" href="images/gallery-original-4.jpg" data-lightgallery="item"><img
+                                class="thumbnail-classic-image" src="images/grid-layout-4-370x256.jpg" alt=""
+                                width="370" height="256" />
                             <div class="thumbnail-classic-caption">
                                 <p class="thumbnail-classic-title">Voter Registration</p>
                                 <p class="thumbnail-classic-text">Elections, Meeting</p>
@@ -282,7 +294,9 @@
                     </div>
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 3">
                         <!-- Thumbnail Classic-->
-                        <a class="thumbnail-classic" href="images/gallery-original-5.jpg" data-lightgallery="item"><img class="thumbnail-classic-image" src="images/grid-layout-5-370x256.jpg" alt="" width="370" height="256" />
+                        <a class="thumbnail-classic" href="images/gallery-original-5.jpg" data-lightgallery="item"><img
+                                class="thumbnail-classic-image" src="images/grid-layout-5-370x256.jpg" alt=""
+                                width="370" height="256" />
                             <div class="thumbnail-classic-caption">
                                 <p class="thumbnail-classic-title">Meeting in Los Angeles</p>
                                 <p class="thumbnail-classic-text">Los Angeles, Events</p>
@@ -292,7 +306,9 @@
                     </div>
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 1">
                         <!-- Thumbnail Classic-->
-                        <a class="thumbnail-classic" href="images/gallery-original-6.jpg" data-lightgallery="item"><img class="thumbnail-classic-image" src="images/grid-layout-6-370x256.jpg" alt="" width="370" height="256" />
+                        <a class="thumbnail-classic" href="images/gallery-original-6.jpg" data-lightgallery="item"><img
+                                class="thumbnail-classic-image" src="images/grid-layout-6-370x256.jpg" alt=""
+                                width="370" height="256" />
                             <div class="thumbnail-classic-caption">
                                 <p class="thumbnail-classic-title">Political Conference 2018</p>
                                 <p class="thumbnail-classic-text">Conference, Annual</p>
@@ -302,7 +318,9 @@
                     </div>
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 3">
                         <!-- Thumbnail Classic-->
-                        <a class="thumbnail-classic" href="images/gallery-original-7.jpg" data-lightgallery="item"><img class="thumbnail-classic-image" src="images/grid-layout-7-370x256.jpg" alt="" width="370" height="256" />
+                        <a class="thumbnail-classic" href="images/gallery-original-7.jpg" data-lightgallery="item"><img
+                                class="thumbnail-classic-image" src="images/grid-layout-7-370x256.jpg" alt=""
+                                width="370" height="256" />
                             <div class="thumbnail-classic-caption">
                                 <p class="thumbnail-classic-title">Democracy for Business</p>
                                 <p class="thumbnail-classic-text">Business, Meeting</p>
@@ -312,7 +330,9 @@
                     </div>
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 1">
                         <!-- Thumbnail Classic-->
-                        <a class="thumbnail-classic" href="images/gallery-original-8.jpg" data-lightgallery="item"><img class="thumbnail-classic-image" src="images/grid-layout-8-370x256.jpg" alt="" width="370" height="256" />
+                        <a class="thumbnail-classic" href="images/gallery-original-8.jpg" data-lightgallery="item"><img
+                                class="thumbnail-classic-image" src="images/grid-layout-8-370x256.jpg" alt=""
+                                width="370" height="256" />
                             <div class="thumbnail-classic-caption">
                                 <p class="thumbnail-classic-title">Meeting with IT CEOs</p>
                                 <p class="thumbnail-classic-text">Information, Event</p>
@@ -322,7 +342,9 @@
                     </div>
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 2">
                         <!-- Thumbnail Classic-->
-                        <a class="thumbnail-classic" href="images/gallery-original-9.jpg" data-lightgallery="item"><img class="thumbnail-classic-image" src="images/grid-layout-9-370x256.jpg" alt="" width="370" height="256" />
+                        <a class="thumbnail-classic" href="images/gallery-original-9.jpg" data-lightgallery="item"><img
+                                class="thumbnail-classic-image" src="images/grid-layout-9-370x256.jpg" alt=""
+                                width="370" height="256" />
                             <div class="thumbnail-classic-caption">
                                 <p class="thumbnail-classic-title">Reorganization Meeting</p>
                                 <p class="thumbnail-classic-text">Meeting, Internal</p>
@@ -385,20 +407,24 @@
                             <h4>Contact Information</h4>
                             <hr>
                             <ul class="list-sm">
-                                <li class="object-inline"><span
-                                        class="icon icon-md mdi mdi-map-marker text-primary"></span><a
-                                        class="link-default" href="#">Training & Placement Office, Chandigarh College of
+                                <li class="object-inline">
+                                    <span class="icon icon-md mdi mdi-map-marker text-primary"></span>
+                                    <a class="link-default" href="#">Training & Placement Office, Chandigarh College of
                                         Engineering and Technology, Sector-26, Chandigarh <br> Pincode - 160019
-                                    </a></li>
-                                <li class="object-inline"><span class="icon icon-md mdi mdi-phone text-primary"></span>
+                                    </a>
+                                </li>
+                                <li class="object-inline">
+                                    <span class="icon icon-md mdi mdi-phone text-primary"></span>
                                     <ul class="list-0">
-                                        <li><a class="link-default" href="tel:#">+91 94144 03565 (Phone)</a></li>
-                                        <li><a class="link-default" href="tel:#">0172-2750872 (Fax)</a></li>
+                                        <li><a class="link-default" href="tel:+91941440365">+91 94144 03565 (Phone)</a>
+                                        </li>
+                                        <li><a class="link-default" href="tel:01722750872">0172-2750872 (Fax)</a></li>
                                     </ul>
                                 </li>
-                                <li class="object-inline"><span
-                                        class="icon icon-md mdi mdi-email text-primary"></span><a class="link-default"
-                                        href="mailto:#">&nbsptpo@ccet.ac.in</a></li>
+                                <li class="object-inline">
+                                    <span class="icon icon-md mdi mdi-email text-primary"></span>
+                                    <a class="link-default" href="mailto:tpo@ccet.ac.in">tpo@ccet.ac.in</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
