--- a/index.html
+++ b/index.html
@@ -387,19 +387,26 @@
                         </div>
                         <div class="row row-30">
                             <div class="col-lg-12">
-                                <p class="text-justify">
-                                    The fast growing industries have great potential to absorb the budding engineers,
-                                    who are well equipped with a sound technical background, required competency,
-                                    personality to compliment and reflect the grooming they have gone through during
-                                    their degree course. The training and placement cell of institute is a fervent
-                                    proponent of the idea of seeing the career as an on-going process of learning and
-                                    development, and we make endeavours to imbibe the same in our students. The
-                                    institute is affiliated with Panjab University, which is one of the oldest and most
-                                    reputed Universities in the field of providing high quality education. The faculty
-                                    and students of CCET always work hard to achieve better academic credibility and
-                                    maintain its position of leadership in engineering and technology.
-                                    I take this opportunity to extend a most cordial invitation to your organization to
-                                    conduct campus recruitment at our campus.
+                                <p class="wow-outer text-justify">
+                                    <span class="wow slideInDown text-justify" data-wow-delay=".05s">
+                                        The fast growing industries have great potential to absorb the budding
+                                        engineers,
+                                        who are well equipped with a sound technical background, required competency,
+                                        personality to compliment and reflect the grooming they have gone through during
+                                        their degree course. The training and placement cell of institute is a fervent
+                                        proponent of the idea of seeing the career as an on-going process of learning
+                                        and
+                                        development, and we make endeavours to imbibe the same in our students. The
+                                        institute is affiliated with Panjab University, which is one of the oldest and
+                                        most
+                                        reputed Universities in the field of providing high quality education. The
+                                        faculty
+                                        and students of CCET always work hard to achieve better academic credibility and
+                                        maintain its position of leadership in engineering and technology.
+                                        I take this opportunity to extend a most cordial invitation to your organization
+                                        to
+                                        conduct campus recruitment at our campus.
+                                    </span>
                                 </p>
                             </div>
                         </div>
@@ -636,20 +643,24 @@
                             <h4>Contact Information</h4>
                             <hr>
                             <ul class="list-sm">
-                                <li class="object-inline"><span
-                                        class="icon icon-md mdi mdi-map-marker text-primary"></span><a
-                                        class="link-default" href="#">Training & Placement Office, Chandigarh College of
+                                <li class="object-inline">
+                                    <span class="icon icon-md mdi mdi-map-marker text-primary"></span>
+                                    <a class="link-default" href="#">Training & Placement Office, Chandigarh College of
                                         Engineering and Technology, Sector-26, Chandigarh <br> Pincode - 160019
-                                    </a></li>
-                                <li class="object-inline"><span class="icon icon-md mdi mdi-phone text-primary"></span>
+                                    </a>
+                                </li>
+                                <li class="object-inline">
+                                    <span class="icon icon-md mdi mdi-phone text-primary"></span>
                                     <ul class="list-0">
-                                        <li><a class="link-default" href="tel:#">+91 94144 03565 (Phone)</a></li>
-                                        <li><a class="link-default" href="tel:#">0172-2750872 (Fax)</a></li>
+                                        <li><a class="link-default" href="tel:+91941440365">+91 94144 03565 (Phone)</a>
+                                        </li>
+                                        <li><a class="link-default" href="tel:01722750872">0172-2750872 (Fax)</a></li>
                                     </ul>
                                 </li>
-                                <li class="object-inline"><span
-                                        class="icon icon-md mdi mdi-email text-primary"></span><a class="link-default"
-                                        href="mailto:#">&nbsptpo@ccet.ac.in</a></li>
+                                <li class="object-inline">
+                                    <span class="icon icon-md mdi mdi-email text-primary"></span>
+                                    <a class="link-default" href="mailto:tpo@ccet.ac.in">tpo@ccet.ac.in</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
