try to show alumni images

--- a/our-alumni.html
+++ b/our-alumni.html
@@ -901,7 +901,7 @@
                         <!-- Profile Classic-->
                         <article class="profile-classic wow slideInLeft">
                             <div class="profile-classic-main"><img class="profile-classic-image"
-                                    src="images/alumni/Kanishk Tyagi@TESLA.jpg" alt="" width="270" height="273" />
+                                    src="images/ALUMNI/Kanishk Tyagi@TESLA.jpg" alt="" width="270" height="273" />
                                 <div class="profile-classic-caption">
                                     <div class="group group-xs group-middle">
                                         <!-- <a class="icon icon-sm icon-creative mdi mdi-facebook" href="#"></a> -->
@@ -921,7 +921,7 @@
                         <!-- Profile Classic-->
                         <article class="profile-classic wow slideInLeft" data-wow-delay=".05s">
                             <div class="profile-classic-main"><img class="profile-classic-image"
-                                    src="images/alumni/arushi chadel.jpg" alt="" width="270" height="273" />
+                                    src="images/ALUMNI/arushi chadel.jpg" alt="" width="270" height="273" />
                                 <div class="profile-classic-caption">
                                     <div class="group group-xs group-middle profile-classic-group">
                                         <!-- <a class="icon icon-sm icon-creative mdi mdi-facebook" href="#"></a> -->
@@ -941,7 +941,7 @@
                         <!-- Profile Classic-->
                         <article class="profile-classic wow slideInLeft" data-wow-delay=".1s">
                             <div class="profile-classic-main"><img class="profile-classic-image"
-                                    src="images/alumni/prabhjot-singh.jpg" alt="" width="270" height="273" />
+                                    src="images/ALUMNI/prabhjot-singh.jpg" alt="" width="270" height="273" />
                                 <div class="profile-classic-caption">
                                     <div class="group group-xs group-middle profile-classic-group">
                                         <!-- <a class="icon icon-sm icon-creative mdi mdi-facebook" href="#"></a> -->
@@ -962,7 +962,7 @@
                         <!-- Profile Classic-->
                         <article class="profile-classic wow slideInLeft" data-wow-delay=".15s">
                             <div class="profile-classic-main"><img class="profile-classic-image"
-                                    src="images/alumni/davina ruppal.jpg" alt="" width="270" height="273" />
+                                    src="images/ALUMNI/davina ruppal.jpg" alt="" width="270" height="273" />
                                 <div class="profile-classic-caption">
                                     <div class="group group-xs group-middle profile-classic-group">
                                         <!-- <a class="icon icon-sm icon-creative mdi mdi-facebook" href="#"></a> -->
@@ -984,7 +984,7 @@
                         <!-- Profile Classic-->
                         <article class="profile-classic wow slideInLeft">
                             <div class="profile-classic-main"><img class="profile-classic-image"
-                                    src="images/alumni/gunjan.jpg" alt="" width="270" height="273" />
+                                    src="images/ALUMNI/gunjan.jpg" alt="" width="270" height="273" />
                                 <div class="profile-classic-caption">
                                     <div class="group group-xs group-middle">
                                         <!-- <a class="icon icon-sm icon-creative mdi mdi-facebook" href="#"></a> -->
@@ -1004,7 +1004,7 @@
                         <!-- Profile Classic-->
                         <article class="profile-classic wow slideInLeft" data-wow-delay=".05s">
                             <div class="profile-classic-main"><img class="profile-classic-image"
-                                    src="images/alumni/sudeep-dahiya.jpg" alt="" width="270" height="273" />
+                                    src="images/ALUMNI/sudeep-dahiya.jpg" alt="" width="270" height="273" />
                                 <div class="profile-classic-caption">
                                     <div class="group group-xs group-middle profile-classic-group">
                                         <!-- <a class="icon icon-sm icon-creative mdi mdi-facebook" href="#"></a> -->
@@ -1024,7 +1024,7 @@
                         <!-- Profile Classic-->
                         <article class="profile-classic wow slideInLeft" data-wow-delay=".1s">
                             <div class="profile-classic-main"><img class="profile-classic-image"
-                                    src="images/alumni/Neha-Gautam.jpg" alt="" width="270" height="273" />
+                                    src="images/ALUMNI/Neha-Gautam.jpg" alt="" width="270" height="273" />
                                 <div class="profile-classic-caption">
                                     <div class="group group-xs group-middle profile-classic-group">
                                         <!-- <a class="icon icon-sm icon-creative mdi mdi-facebook" href="#"></a> -->
@@ -1044,7 +1044,7 @@
                         <!-- Profile Classic-->
                         <article class="profile-classic wow slideInLeft" data-wow-delay=".15s">
                             <div class="profile-classic-main"><img class="profile-classic-image"
-                                    src="images/alumni/parul-garg.jpg" alt="" width="270" height="273" />
+                                    src="images/ALUMNI/parul-garg.jpg" alt="" width="270" height="273" />
                                 <div class="profile-classic-caption">
                                     <div class="group group-xs group-middle profile-classic-group">
                                         <!-- <a class="icon icon-sm icon-creative mdi mdi-facebook" href="#"></a> -->
